--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["6285342106390@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
+    "ownerNumber": ["6283104818812@s.whatsapp.net","6283104818812@s.whatsapp.net"],
+    "ownerName": "ᴹᴿ᭄ RifqiTzyོ ×፝֟͜×",
     "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
+    "botName": "D4RKBOTོ ",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
