--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["6285642625763@s.whatsapp.net","6285327003251@s.whatsapp.net"],
+    "ownerNumber": ["6285642625763@s.whatsapp.net","6281391337455@s.whatsapp.net"],
     "ownerName": "ᴹᴿ᭄Denzz-SM×፝֟͜×",
     "instagram" : "https://instagram.com/xinzuo_bot",
     "botName": "乂丨几 乙 ㄩ ㄖ",
-    "footer": "telekomunikasi.com",
+    "footer": "XinHangNet Internet cepat untuk anda",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
